--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -5,7 +5,7 @@
 <script>
   MathJax = {
     tex: {
-      inlineMath: [['\(', '\)']]
+      inlineMath: [['$', '$']]
     },
     svg: {
       fontCache: 'global'
