--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -6,7 +6,7 @@
   MathJax = {
     tex: {
       inlineMath: [['$', '$']],
-      displayMath: [['$$', '$$']],
+      displayMath: [['\[', '\]']],
       macros: {
         Cay: '\\mathrm{Cay}',
         Z: '\\mathbb{Z}',
